[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypeul"
version = "0.3.2"
description = "A fork of pypeul maintained by the Dolphin Emulator project."
authors = [
    { name = "mickael9", email = "mickael9@gmail.com" },
    { name = "zopieux", email = "zopieux@gmail.com" },
]
maintainers = [
    { name = "OatmealDome", email = "oatmeal@dolphin-emu.org" }
]
requires-python = ">=3.7,<4"
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = ["irc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/dolphin-emu/pypeul"
